// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModalService ModalRef#close() can be called multiple times on the same ModalRef 1`] = `
Array [
  Array [
    <div />,
  ],
]
`;

exports[`ModalService openModal() renders a modal to the DOM 1`] = `
Array [
  Array [
    <EuiOverlayMask>
      <mockConstructor>
        <EuiModal
          maxWidth={true}
          onClose={[Function]}
        >
          <span>
            Modal content
          </span>
        </EuiModal>
      </mockConstructor>
    </EuiOverlayMask>,
    <div />,
  ],
]
`;

exports[`ModalService openModal() with a currently active modal replaces the current modal with a new one 1`] = `
Array [
  Array [
    <EuiOverlayMask>
      <mockConstructor>
        <EuiModal
          maxWidth={true}
          onClose={[Function]}
        >
          <span>
            Modal content 1
          </span>
        </EuiModal>
      </mockConstructor>
    </EuiOverlayMask>,
    <div />,
  ],
  Array [
    <EuiOverlayMask>
      <mockConstructor>
        <EuiModal
          maxWidth={true}
          onClose={[Function]}
        >
          <span>
            Flyout content 2
          </span>
        </EuiModal>
      </mockConstructor>
    </EuiOverlayMask>,
    <div />,
  ],
]
`;
